# interruptible

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: future_ext.rs  interrupt_guard.rs  interrupt_safe_stream.rs  interrupt_signal.rs  interrupt_strategy.rs  interruptibility.rs  interruptibility_state.rs  interruptible_control_future.rs  interruptible_future_control.rs  interruptible_future_ext.rs  interruptible_future_result.rs  interruptible_result_future.rs  interruptible_stream.rs  interruptible_stream_ext.rs  interruptible_stream_generic.rs  lib.rs  owned_or_mut_ref.rs  poll_outcome.rs  poll_outcome_n_remaining.rs  stream_ext.rs  stream_interrupt_ext.rs  stream_outcome.rs  stream_outcome_n_remaining.rs
