[package]
name = "interruptible"
version = "0.1.0"
description = "Stops a future or stream from producing values when an interrupt signal is received."
documentation = "https://docs.rs/interruptible/"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
homepage = "https://github.com/azriel91/interruptible"
repository = "https://github.com/azriel91/interruptible"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["interrupt", "stream"]
license = "MIT OR Apache-2.0"

[dependencies]
futures = "0.3.28"
stream-cancel = { version = "0.8.1", optional = true }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }

[features]
default = []
stream = ["dep:stream-cancel", "tokio/rt"]
ctrl_c = ["tokio/rt", "tokio/signal"]
