[package]
name = "interruptible"
version = "0.0.2"
description = "Stops a future producer or stream from producing values when interrupted."
documentation = "https://docs.rs/interruptible/"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
homepage = "https://github.com/azriel91/interruptible"
repository = "https://github.com/azriel91/interruptible"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["interrupt", "stream"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["stream", "stream"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3.28"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }

[features]
default = []
stream = ["tokio/rt"]
ctrl_c = ["tokio/rt", "tokio/signal"]
